syntax = "proto3";
package clock;

service SyncClock {
    rpc CristianTime (CristianTimeRequest) returns (CristianTimeResponse);
}

message CristianTimeRequest {
}

message CristianTimeResponse {
    uint32 hours = 1;
    uint32 minutes = 2;
    uint32 seconds = 3;
    uint32 milliseconds = 4;
}
